fix(30): revise plans based on checker feedback

--- a/.planning/phases/30-snapshot-validation/30-01-PLAN.md
+++ b/.planning/phases/30-snapshot-validation/30-01-PLAN.md
@@ -90,22 +90,29 @@ type MockSnapshot struct {
 - If command contains `copy-from=`, route to snapshot creation logic
 - Parse `copy-from=[find slot=<name>]` to extract source volume slot name using regex `copy-from=\[find slot=([^\]]+)\]`
 - Look up source volume in `s.volumes` by slot name
-- If source not found, return `"failure: no such item\n", 1`
+- If source not found in `s.volumes`, also check `s.snapshots` (for RestoreSnapshot which copies from a snapshot)
+- If source not found in either map, return `"failure: no such item\n", 1`
 - Create snapshot entry in `s.snapshots` map (key = slot value)
 - Snapshot gets: Slot from `slot=` param, FilePath from `file-path=` param, FileSizeBytes copied from source volume, SourceVolume = source slot, CreatedAt = time.Now()
 - Snapshot disk is NOT added to `s.volumes` (snapshots are NOT NVMe-exported volumes)
 - Also create backing file entry in `s.files` with the snapshot file path and size
-- If `copy-from` source is a snapshot (found in `s.snapshots` instead of `s.volumes`), support that too (for RestoreSnapshot which copies from snapshot to create a new NVMe-exported volume — but note RestoreSnapshot creates a volume with NVMe flags, so the `copy-from` with NVMe flags present means it goes through the normal volume creation path with data from snapshot)
 - For RestoreSnapshot path: if `copy-from` is present AND `nvme-tcp-export=yes` is also present, this is a restore operation — create the entry in `s.volumes` (not `s.snapshots`), copy size from source snapshot
 
 **Update `handleDiskRemove()`** to also check `s.snapshots` map:
-- Current code only checks `s.volumes`. After removing from `s.volumes`, also check and remove from `s.snapshots`
-- Also remove the backing file from `s.files` when removing a snapshot
+- Current code only checks `s.volumes` and returns exit 0 (idempotent success) when slot is not found. This is WRONG for snapshots — after Plan 01 stores snapshots in `s.snapshots`, a `/disk remove` on a snapshot slot would silently succeed without actually removing it.
+- Fix: After checking `s.volumes`, also check `s.snapshots`. If the slot is in `s.snapshots`, delete it from `s.snapshots` and remove its backing file from `s.files`.
+- Only return idempotent success (exit 0, no error) if the slot exists in NEITHER `s.volumes` NOR `s.snapshots`.
 
 **Update `handleDiskPrintDetail()`** to also search snapshots:
-- When querying by slot and volume not found, check `s.snapshots` map
-- Format snapshot output as: `slot="<slot>" type="file" file-path="<path>" file-size=<bytes> status="ready"` (NO nvme-tcp-export fields, matching what real RouterOS returns for copy-from entries)
-- When listing all (no slot filter with slot~"snap-" prefix), include snapshot entries from `s.snapshots` map in the output
+- When querying by slot and volume not found in `s.volumes`, check `s.snapshots` map
+- Use a NEW `formatSnapshotDetail()` function (NOT `formatDiskDetail()`) to format snapshot output
+- When listing all (no slot filter), include snapshot entries from `s.snapshots` in the output, also using `formatSnapshotDetail()`
+
+**Create `formatSnapshotDetail(snap *MockSnapshot) string` function:**
+- This is a separate function from `formatDiskDetail()` because snapshots have different fields
+- Format as: `slot="<slot>" type="file" file-path="<path>" file-size=<bytes> status="ready"`
+- MUST NOT include `nvme-tcp-export`, `nvme-tcp-server-port`, or `nvme-tcp-server-nqn` fields (snapshots are not NVMe-exported)
+- This matches what real RouterOS returns for copy-from disk entries that have no NVMe export configured
 
 **Update `GetSnapshot()` and `ListSnapshots()` accessor methods** to use `Slot` instead of `Name`.
 
@@ -116,9 +123,11 @@ Run `go build ./test/mock/...` to verify compilation.
 Run `go vet ./test/mock/...` to check for issues.
 Grep for `/disk/btrfs/subvolume` in test/mock/rds_server.go — must return 0 matches.
 Grep for `copy-from` in test/mock/rds_server.go — must return at least 1 match.
+Grep for `formatSnapshotDetail` in test/mock/rds_server.go — must return at least 1 match (confirms the function was created, not reusing formatDiskDetail for snapshots).
+Grep for `s.snapshots` in the handleDiskRemove function area of test/mock/rds_server.go — must return at least 1 match (confirms handleDiskRemove checks snapshot map, not silently succeeding).
   </verify>
   <done>
-Mock RDS server compiles, handles `/disk add copy-from=` for snapshot creation, handles `/disk remove` for snapshot deletion, handles `/disk print detail` for snapshot queries. No Btrfs subvolume handler code remains.
+Mock RDS server compiles, handles `/disk add copy-from=` for snapshot creation, handles `/disk remove` for both volumes AND snapshots, handles `/disk print detail` for snapshot queries via dedicated `formatSnapshotDetail()`. No Btrfs subvolume handler code remains.
   </done>
 </task>
 
@@ -162,14 +171,17 @@ Run `go test ./test/mock/...` — all existing tests still pass (no regressions)
 2. `go test ./test/mock/...` — all tests pass (existing + new snapshot tests)
 3. `grep -c "btrfs/subvolume" test/mock/rds_server.go` returns 0
 4. `grep -c "copy-from" test/mock/rds_server.go` returns > 0
-5. Mock server snapshot state uses Slot (not Name), has no FSLabel/ReadOnly fields
+5. `grep -c "formatSnapshotDetail" test/mock/rds_server.go` returns > 0
+6. Mock server snapshot state uses Slot (not Name), has no FSLabel/ReadOnly fields
+7. `handleDiskRemove` checks `s.snapshots` (not just `s.volumes`)
 </verification>
 
 <success_criteria>
 - Mock RDS server handles copy-from snapshot semantics matching real RouterOS behavior
 - Old Btrfs subvolume handlers completely removed
 - Snapshot disk entries are independent copies (not linked to source)
-- Snapshot entries have no NVMe export in their disk print output
+- Snapshot entries formatted by dedicated `formatSnapshotDetail()` with no NVMe export fields
+- `/disk remove` correctly removes entries from both `s.volumes` and `s.snapshots` maps
 - All existing mock server tests continue to pass
 - New snapshot-specific tests validate the copy-from flow end-to-end
 </success_criteria>
