--- a/.planning/phases/30-snapshot-validation/30-02-PLAN.md
+++ b/.planning/phases/30-snapshot-validation/30-02-PLAN.md
@@ -6,15 +6,17 @@ wave: 2
 depends_on: ["30-01"]
 files_modified:
   - test/sanity/sanity_test.go
+  - test/mock/rds_server.go
+  - pkg/driver/controller.go
   - docs/HARDWARE_VALIDATION.md
 autonomous: true
 
 must_haves:
   truths:
     - "CSI sanity test suite passes all snapshot test cases (CreateSnapshot, DeleteSnapshot, ListSnapshots) with zero failures"
-    - "Sanity test config enables snapshot testing with correct parameters"
-    - "Hardware validation TC-08 documents the copy-from snapshot approach (not Btrfs subvolume)"
-    - "TC-08 verification steps reference /disk print (not /disk/btrfs/subvolume/print)"
+    - "Snapshot create/delete/list operations work end-to-end through CSI gRPC -> driver -> mock SSH -> mock RDS"
+    - "Hardware validation TC-08 documents the copy-from snapshot approach and is ready for manual execution against real RDS"
+    - "TC-08 SSH verification commands use /disk print detail (not /disk/btrfs/subvolume/print)"
     - "TC-08 expected RDS output shows type=file without nvme-tcp-export (not type=snapshot with read-only=yes)"
   artifacts:
     - path: "test/sanity/sanity_test.go"
@@ -43,7 +45,7 @@ Run CSI sanity test suite to verify snapshot operations pass end-to-end with the
 
 Purpose: The CSI sanity test suite is the canonical validation that the driver implements the CSI spec correctly. With the mock server updated (Plan 01), the sanity snapshot tests should now work with copy-from semantics. TC-08 in HARDWARE_VALIDATION.md still references the old Btrfs subvolume approach and needs updating.
 
-Output: Passing CSI sanity tests (including snapshots); updated TC-08 hardware validation test case.
+Output: Passing CSI sanity tests (including snapshots); updated TC-08 hardware validation test case ready for manual execution.
 </objective>
 
 <execution_context>
@@ -68,11 +70,13 @@ Output: Passing CSI sanity tests (including snapshots); updated TC-08 hardware v
 
 <task type="auto">
   <name>Task 1: Run CSI sanity snapshot tests and fix any failures</name>
-  <files>test/sanity/sanity_test.go</files>
+  <files>test/sanity/sanity_test.go, test/mock/rds_server.go, pkg/driver/controller.go</files>
   <action>
 Run the CSI sanity test suite with `go test ./test/sanity/ -v -timeout 120s` and analyze results.
 
 **Expected behavior:** The sanity test already has `TestSnapshotParameters` configured (line 204). With the mock server now handling copy-from, snapshot sanity tests should pass. If they fail, diagnose and fix.
+
+**Files that may need fixes:** This task primarily targets `test/sanity/sanity_test.go` but may also require fixes in `test/mock/rds_server.go` (if Plan 01's mock doesn't handle edge cases the sanity suite exercises) or `pkg/driver/controller.go` (if the CSI RPCs have bugs revealed by sanity testing).
 
 **Update sanity test config if needed:**
 - Remove the outdated comment on line 205-207 about "Btrfs snapshots" and "btrfsFSLabel" — the snapshot flow no longer uses Btrfs labels
@@ -83,13 +87,13 @@ Run the CSI sanity test suite with `go test ./test/sanity/ -v -timeout 120s` and
 
 1. **"bad command name /disk/btrfs/subvolume"** in mock server output: Means the driver is still sending old Btrfs commands. This should NOT happen after Phase 29 rewrote commands.go — if it does, check that pkg/rds/commands.go has the copy-from implementations.
 
-2. **Snapshot not found after create**: Mock server's `/disk print detail where slot=snap-*` may not return output in the format parseSnapshotInfo() expects. Check that the mock's formatDiskDetail output matches what parseSnapshotInfo parses (slot="...", file-path="...", file-size=NNN).
+2. **Snapshot not found after create**: Mock server's `/disk print detail where slot=snap-*` may not return output in the format parseSnapshotInfo() expects. Check that the mock's formatSnapshotDetail output matches what parseSnapshotInfo parses (slot="...", file-path="...", file-size=NNN).
 
 3. **Idempotency failure**: CSI sanity calls CreateSnapshot twice with same name. The mock server's handleDiskAdd must return success (not "already exists" error) when a snapshot with the same slot already exists. Check that the copy-from path in handleDiskAdd checks `s.snapshots[slot]` for existing entry and returns success if it matches.
 
 4. **ListSnapshots returns wrong count**: The sanity test may call ListSnapshots and expect specific entries. Ensure the mock's handleDiskPrintDetail with `slot~"snap-"` pattern returns all snapshot entries.
 
-5. **DeleteSnapshot fails**: Ensure handleDiskRemove checks both s.volumes and s.snapshots maps.
+5. **DeleteSnapshot fails**: Ensure handleDiskRemove checks both s.volumes and s.snapshots maps (should be handled by Plan 01, but verify).
 
 **If the sanity test has a csi-sanity binary dependency**, check if it's installed:
 ```bash
@@ -143,6 +147,8 @@ slot="snap-<source-uuid>-at-<hash>" type="file" file-path="/storage-pool/metal-c
 
 **Also update:** The Results Template table at the bottom — TC-08 description should say "Snapshot Operations (copy-from)" instead of just "Snapshot Operations"
 
+**Hardware execution note:** Add a section at the end of TC-08 titled "Execution" with: "This test case is designed for manual execution against real RDS hardware. After automated sanity tests pass (this phase), execute TC-08 steps manually against the RDS at 10.42.68.1 and record results in the Results Template. Document execution outcome in the phase SUMMARY.md."
+
 **Do NOT change:** Any other test cases (TC-01 through TC-07), the Prerequisites section, the Performance Baselines section, or the Troubleshooting Decision Tree.
   </action>
   <verify>
@@ -152,7 +158,7 @@ Grep for "type=snapshot" in docs/HARDWARE_VALIDATION.md — should return 0 matc
 Grep for "read-only=yes" in docs/HARDWARE_VALIDATION.md — should return 0 matches (in TC-08 context).
   </verify>
   <done>
-TC-08 documents the copy-from snapshot approach: SSH verification uses `/disk print detail`, expected output shows file-backed disk without NVMe export, troubleshooting references copy-from semantics. No Btrfs subvolume references remain.
+TC-08 documents the copy-from snapshot approach: SSH verification uses `/disk print detail`, expected output shows file-backed disk without NVMe export, troubleshooting references copy-from semantics. Includes execution note for manual hardware validation. No Btrfs subvolume references remain.
   </done>
 </task>
 
@@ -165,6 +171,7 @@ TC-08 documents the copy-from snapshot approach: SSH verification uses `/disk pr
 4. `grep -c "btrfs/subvolume" docs/HARDWARE_VALIDATION.md` returns 0
 5. `grep -c "copy-from" docs/HARDWARE_VALIDATION.md` returns > 0
 6. TC-08 steps reference `/disk print detail` for verification (not Btrfs commands)
+7. TC-08 includes execution note for manual hardware validation
 </verification>
 
 <success_criteria>
@@ -173,6 +180,7 @@ TC-08 documents the copy-from snapshot approach: SSH verification uses `/disk pr
 - TC-08 hardware validation reflects the actual copy-from implementation
 - No Btrfs subvolume references remain in TC-08
 - Snapshot verification on RDS uses `/disk print detail where slot~"snap-"`
+- TC-08 is documented as ready for manual hardware execution (post-phase activity)
 </success_criteria>
 
 <output>
